# serializer version: 1
# name: test_identifier_option_with_wrong_type
  OptionKeyNotProvidedError('Expected option key in IdentifierOption option but got NoneType instead.')
# ---
# name: test_identifier_option_without_name
  OptionKeyNotProvidedError('Expected option key in IdentifierOption option but got NoneType instead.')
# ---
# name: test_invalid_as_query_option
  OptionKeyNotProvidedError('Expected option key in IdentifierOption option but got NoneType instead.')
# ---
# name: test_literal_option_with_wrong_type
  OptionKeyNotProvidedError('Expected option key in LiteralOption option but got NoneType instead.')
# ---
